--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "zanixon.db",
-  "version": "1.3.5",
+  "version": "2.0.0",
   "description": "A simple JSON database for javacsript node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "dependencies": {
     "colors": "^1.4.0",
     "fs": "^0.0.1-security",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "path": "^0.12.7"
   },
   "keywords": [
     "zanixon",
